sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:15: error: not found: value plustPetit
      if (plustPetit(i+ecart,i)){
          ^